Removed useless quotes.
No biggie.

--- a/Final Project -ATeam.ipynb
+++ b/Final Project -ATeam.ipynb
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the majority of the demographic of this sample was a \"White\" majority at 85.54%. The next largest value was African American with 9.59%, Asian/Pacific Islander with 3.19%, then American-Indian .956%. The Other category consists of .83%."
+    "As you can see, the majority of the demographic of this sample was a White majority at 85.54%. The next largest value was African American with 9.59%, Asian/Pacific Islander with 3.19%, then American-Indian .956%. The Other category consists of .83%."
    ]
   },
   {
