More grammatical fixes
While more verbose (slightly), it's also clearer!

--- a/Final Project -ATeam.ipynb
+++ b/Final Project -ATeam.ipynb
@@ -334,9 +334,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a connection between income and education level. More education equals more income. People who got PHD or Master's degrees earn more than 50k per year. \n",
-    "People who study preschool to 12th earn less than 50k per year. Only several people in this group can earn more than 50k per year.\n",
-    "\n"
+    "There is a connection between income and education level. Generally speaking, more education means more income. With few exceptions, people who got PhD or Masters' degrees earn more than 50k per year. \n",
+    "People who completed the range of schooling defined as \"preschool to 12th\" earn less than 50k per year. Only several people in this group actually earned more than 50k per year."
    ]
   },
   {
