--- a/Final Project -ATeam.ipynb
+++ b/Final Project -ATeam.ipynb
@@ -737,7 +737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the heatmap and the correlation coefficient,there is correlation between quatitative variables in the dataset"
+    "Based on the heatmap and the correlation coefficient,there is no correlation between quatitative variables in the dataset"
    ]
   },
   {
@@ -1110,7 +1110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
